--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -1,5 +1,5 @@
 NAME	:= bureaucrats
-SRCS	:= main.cpp Bureaucrat.cpp
+SRCS	:= main.cpp Bureaucrat.cpp Form.cpp
 OBJS	:= $(SRCS:.cpp=.o)
 CC		:= c++
 CFLAGS	:= -Wall -Wextra -Werror -std=c++98
